--- a/app/views/home/components/_tabs.html.erb
+++ b/app/views/home/components/_tabs.html.erb
@@ -87,7 +87,7 @@
                 <td> <a href="#" id="hideshow"><br>Blague n°1</br></a></td>
 
                 <td id="message1">
-                                  <em><strong>Objet: </em></strong>Blague n°1</li></br>
+                                  <font size="5"><em><strong>Objet: </em></strong>Blague n°1</li></br></font>
                                   <em><strong>Contenu: </em></strong>"- I hate this cheese with the holes in it.
 - Then eat around them."</br></br><a id="delete1" class="btn btn-danger">Supprimer</a></td></li>
                                   
@@ -101,7 +101,7 @@
                 <td><a href="#" id="hideshow1">Blague n°2</a></td>
 
                 <td id="message2">
-                                  <em><strong>Objet:  </em></strong>Blague n°2</br>
+                                  <font size="5"><em><strong>Objet:  </em></strong>Blague n°2</br></font>
                                   <em><strong>Contenu: </em></strong>"- I'm so broke, if a robber was to rob me, all he'd get would be practice." </br></br> <button id="delete2"class="btn btn-danger">Supprimer</button></td></li>
             </tr>
         </tbody>
@@ -110,7 +110,7 @@
                 <td><a href="#" id="hideshow2">Blague n°3</a></td>
 
                 <td id="message3" >
-                                  <em><strong>Objet:  </em></strong>Blague n°3</br>
+                                 <font size="5"><em><strong>Objet:  </em></strong>Blague n°3</br></font>
                                   <em><strong>Contenu: </em></strong>"- What was your mother's name before she was married?
 - I didn't have a mother before she was married."</br></br> <button id="delete3" class="btn btn-danger">Supprimer</button></td></li>
             </tr>
